fix: remove scrollbar by fixing bg leaking

--- a/src/renderer/src/styles.css
+++ b/src/renderer/src/styles.css
@@ -223,6 +223,11 @@ input[type='number']::-webkit-outer-spin-button {
     font-size: 11px;
   }
 
+  .unique-card:hover .icon-glow-blur {
+    transform: translate(-50%, -50%) scale(1.15);
+    opacity: 0.7;
+  }
+
   .regex-tab-active::before,
   .regex-tab-active::after {
     content: '';
